--- a/cuahangvp/package.json
+++ b/cuahangvp/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.13.1",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
